--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
   --primary-color: #99634d;
 }
 
+.bg-primary-100 {
+  --tw-bg-opacity: 1;
+  background-color: white;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
