--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
 
 @layer base {
   :root {
+    --padding-section: 2.5rem;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
