feat: change color primary

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #fed11b;
+  --primary: 35 85% 50%;
+  --primary-color: hsl(var(--primary));
   --heroui-focus: 0 0% 100%;
   --heroui-focus-opacity: 0;
 }
